--- a/genindex.html
+++ b/genindex.html
@@ -108,14 +108,20 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_abs_sim_time">get_abs_sim_time() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_current_process_id">get_current_process_id() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_end_time">get_end_time() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_ids_of_names">get_ids_of_names() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_jte_export">get_jte_export() (pyplantsim.plantsim.Plantsim method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_jte_export">get_jte_export() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_start_date">get_start_date() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_type_info">get_type_info() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_type_info_count">get_type_info_count() (pyplantsim.plantsim.Plantsim method)</a>
@@ -264,16 +270,18 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_network">set_network() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_seed">set_seed() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_show_message_box">set_show_message_box() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_stop_simulation_on_error">set_stop_simulation_on_error() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_suppress_start_of_3d">set_suppress_start_of_3d() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_trust_models">set_trust_models() (pyplantsim.plantsim.Plantsim method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_trust_models">set_trust_models() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_value">set_value() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_visible">set_visible() (pyplantsim.plantsim.Plantsim method)</a>
