--- a/genindex.html
+++ b/genindex.html
@@ -116,9 +116,11 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_ids_of_names">get_ids_of_names() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_jte_export">get_jte_export() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_jte_export">get_jte_export() (pyplantsim.plantsim.Plantsim method)</a>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_model_language">get_model_language() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_start_date">get_start_date() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
