--- a/genindex.html
+++ b/genindex.html
@@ -246,11 +246,13 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.register_on_simulation_error">register_on_simulation_error() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.register_on_simulation_finished">register_on_simulation_finished() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.release">release() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.remove_error_handler">remove_error_handler() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.reset_simulation">reset_simulation() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
