deploy: 99ca668976429d9e6f8c17816171f2b00ff5450a

--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ documentation for details.</p>
 </dd>
 <dt>_simulation_finished_event<span class="classifier">threading.Event</span></dt><dd><p>Event triggered when the simulation finishes.</p>
 </dd>
+<dt>_error_handler<span class="classifier">Optional[str]</span></dt><dd><p>The path to the installed error handler</p>
+</dd>
 <dt>_user_simulation_finished_cb<span class="classifier">Optional[Callable[[], None]]</span></dt><dd><p>Callback for when the simulation finishes.</p>
 </dd>
 <dt>_user_simtalk_msg_cb<span class="classifier">Optional[Callable[[str], None]]</span></dt><dd><p>Callback for SimTalk messages.</p>
