--- a/genindex.html
+++ b/genindex.html
@@ -282,11 +282,13 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_suppress_start_of_3d">set_suppress_start_of_3d() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_trust_models">set_trust_models() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_value">set_value() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_version">set_version() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_visible">set_visible() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
