deploy: 62033efbd76c47ccfe633a173cba66f62790250b

--- a/genindex.html
+++ b/genindex.html
@@ -118,11 +118,15 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_jte_export">get_jte_export() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_model_language">get_model_language() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_start_date">get_start_date() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_table">get_table() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_table_column_data_type">get_table_column_data_type() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_type_info">get_type_info() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
@@ -282,10 +286,12 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_suppress_start_of_3d">set_suppress_start_of_3d() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_trust_models">set_trust_models() (pyplantsim.plantsim.Plantsim method)</a>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_table">set_table() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_trust_models">set_trust_models() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_value">set_value() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.set_version">set_version() (pyplantsim.plantsim.Plantsim method)</a>
