deploy: 596ae6668045302ac7a905c9d32c31d70957f09a

--- a/genindex.html
+++ b/genindex.html
@@ -103,6 +103,10 @@
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.execute_sim_talk">execute_sim_talk() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.exists_path">exists_path() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
@@ -259,6 +263,8 @@
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.remove_error_handler">remove_error_handler() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.reset_simulation">reset_simulation() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.restart">restart() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.run_simulation">run_simulation() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
