--- a/genindex.html
+++ b/genindex.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; pyplantsim 0.4.4 documentation</title>
+  <title>Index &mdash; pyplantsim 0.4.5 documentation</title>
       <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
       <link rel="stylesheet" type="text/css" href="_static/css/theme.css?v=e59714d7" />
 
   
       <script src="_static/jquery.js?v=5d32c60e"></script>
       <script src="_static/_sphinx_javascript_frameworks_compat.js?v=2cd50e6c"></script>
-      <script src="_static/documentation_options.js?v=90733dfc"></script>
+      <script src="_static/documentation_options.js?v=340bb9e5"></script>
       <script src="_static/doctools.js?v=9bcbadda"></script>
       <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     <script src="_static/js/theme.js"></script>
@@ -114,6 +114,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_abs_sim_time">get_abs_sim_time() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_call_cycles">get_call_cycles() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_current_process_id">get_current_process_id() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_end_time">get_end_time() (pyplantsim.plantsim.Plantsim method)</a>
@@ -122,10 +124,10 @@
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_jte_export">get_jte_export() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
-      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_model_language">get_model_language() (pyplantsim.plantsim.Plantsim method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_model_language">get_model_language() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_start_date">get_start_date() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.get_table">get_table() (pyplantsim.plantsim.Plantsim method)</a>
@@ -248,6 +250,8 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#pyplantsim.plantsim.Plantsim.read_call_cycles">read_call_cycles() (pyplantsim.plantsim.Plantsim method)</a>
+</li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.register_on_fire_simtalk_message">register_on_fire_simtalk_message() (pyplantsim.plantsim.Plantsim method)</a>
 </li>
       <li><a href="index.html#pyplantsim.plantsim.Plantsim.register_on_simtalk_message">register_on_simtalk_message() (pyplantsim.plantsim.Plantsim method)</a>
